--- a/iOSAvanzado/Presentation/HeroDetail/HeroDetail.storyboard
+++ b/iOSAvanzado/Presentation/HeroDetail/HeroDetail.storyboard
@@ -4,7 +4,6 @@
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22131"/>
         <capability name="Image references" minToolsVersion="12.0"/>
-        <capability name="Map view configurations" minToolsVersion="14.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -18,31 +17,14 @@
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="YOB-T7-gSQ">
-                                <rect key="frame" x="0.0" y="0.0" width="393" height="445"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" secondItem="YOB-T7-gSQ" secondAttribute="height" multiplier="393:445" id="Tdk-RD-chL"/>
-                                </constraints>
-                                <standardMapConfiguration key="preferredConfiguration"/>
-                            </mapView>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Qig-dx-cxf">
-                                <rect key="frame" x="273" y="341" width="104" height="104"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="104" id="Hgt-my-AU9"/>
-                                    <constraint firstAttribute="width" secondItem="Qig-dx-cxf" secondAttribute="height" multiplier="1:1" id="aG2-Jy-5lT"/>
-                                </constraints>
-                            </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NYi-Vl-Cjf">
-                                <rect key="frame" x="16" y="465" width="361" height="21"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="21" id="oTj-cu-sQI"/>
-                                </constraints>
+                                <rect key="frame" x="16" y="316" width="361" height="28"/>
                                 <fontDescription key="fontDescription" name="Papyrus" family="Papyrus" pointSize="18"/>
                                 <color key="textColor" systemColor="systemOrangeColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" editable="NO" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="t9c-Sl-otR">
-                                <rect key="frame" x="16" y="506" width="361" height="304"/>
+                                <rect key="frame" x="16" y="360" width="361" height="450"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
                                 <color key="textColor" systemColor="labelColor"/>
@@ -66,29 +48,32 @@
                                     <action selector="onBackPressed:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="VGB-gk-yWV"/>
                                 </connections>
                             </button>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Qig-dx-cxf">
+                                <rect key="frame" x="0.0" y="0.0" width="393" height="300"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="300" id="Hgt-my-AU9"/>
+                                </constraints>
+                            </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
+                            <constraint firstItem="Qig-dx-cxf" firstAttribute="leading" secondItem="5EZ-qb-Rvc" secondAttribute="leading" id="1pU-5a-zuy"/>
                             <constraint firstItem="NYi-Vl-Cjf" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="16" id="4Yv-og-EoI"/>
+                            <constraint firstItem="t9c-Sl-otR" firstAttribute="top" secondItem="NYi-Vl-Cjf" secondAttribute="bottom" constant="16" id="849-o5-88w"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="NYi-Vl-Cjf" secondAttribute="trailing" constant="16" id="8nC-1O-KvP"/>
-                            <constraint firstItem="YOB-T7-gSQ" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="DCF-DQ-n9m"/>
+                            <constraint firstItem="Qig-dx-cxf" firstAttribute="trailing" secondItem="5EZ-qb-Rvc" secondAttribute="trailing" id="Bqo-UZ-SRI"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="t9c-Sl-otR" secondAttribute="trailing" constant="16" id="Kkv-f2-c55"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="bottom" secondItem="t9c-Sl-otR" secondAttribute="bottom" constant="8" id="Otq-UG-XWD"/>
                             <constraint firstItem="ihA-09-puI" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="16" id="Qpo-Cc-4wB"/>
-                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="Qig-dx-cxf" secondAttribute="trailing" constant="16" id="SV7-4u-MDo"/>
-                            <constraint firstItem="NYi-Vl-Cjf" firstAttribute="top" secondItem="YOB-T7-gSQ" secondAttribute="bottom" constant="20" id="cld-D9-Wb6"/>
+                            <constraint firstItem="NYi-Vl-Cjf" firstAttribute="top" secondItem="Qig-dx-cxf" secondAttribute="bottom" constant="16" id="Ubd-of-7T0"/>
                             <constraint firstItem="ihA-09-puI" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" id="dmn-4P-cYr"/>
-                            <constraint firstItem="t9c-Sl-otR" firstAttribute="top" secondItem="NYi-Vl-Cjf" secondAttribute="bottom" constant="20" id="jTS-wS-HyP"/>
+                            <constraint firstItem="Qig-dx-cxf" firstAttribute="top" secondItem="5EZ-qb-Rvc" secondAttribute="top" id="gec-nO-OVm"/>
                             <constraint firstItem="t9c-Sl-otR" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="16" id="nu4-QY-iAm"/>
-                            <constraint firstItem="YOB-T7-gSQ" firstAttribute="top" secondItem="5EZ-qb-Rvc" secondAttribute="top" id="rYF-fh-TGK"/>
-                            <constraint firstItem="Qig-dx-cxf" firstAttribute="bottom" secondItem="YOB-T7-gSQ" secondAttribute="bottom" id="wal-TA-Zws"/>
-                            <constraint firstItem="YOB-T7-gSQ" firstAttribute="trailing" secondItem="vDu-zF-Fre" secondAttribute="trailing" id="xfP-ix-QXj"/>
                         </constraints>
                     </view>
                     <connections>
                         <outlet property="heroDescription" destination="t9c-Sl-otR" id="OZR-RW-nxx"/>
-                        <outlet property="mapView" destination="YOB-T7-gSQ" id="BaQ-lt-swb"/>
                         <outlet property="name" destination="NYi-Vl-Cjf" id="Oqv-A8-bbx"/>
                         <outlet property="photo" destination="Qig-dx-cxf" id="2jR-J5-0lJ"/>
                     </connections>
