--- a/iOSAvanzado/Presentation/HeroesList/HeroesList.storyboard
+++ b/iOSAvanzado/Presentation/HeroesList/HeroesList.storyboard
@@ -11,7 +11,7 @@
         <!--Heroes List View Controller-->
         <scene sceneID="s0d-6b-0kx">
             <objects>
-                <viewController storyboardIdentifier="HeroesList" id="Y6W-OH-hqX" customClass="HeroesListViewController" customModule="iOSAvanzado" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="HeroesList" useStoryboardIdentifierAsRestorationIdentifier="YES" id="Y6W-OH-hqX" customClass="HeroesListViewController" customModule="iOSAvanzado" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="5EZ-qb-Rvc">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -20,6 +20,14 @@
                                 <rect key="frame" x="0.0" y="93.333333333333314" width="393" height="724.66666666666674"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                             </tableView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="KOu-sx-gQ8">
+                                <rect key="frame" x="280" y="59" width="97" height="35"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="Ver mapa"/>
+                                <connections>
+                                    <action selector="onViewMapPressed:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="P7h-eT-gtR"/>
+                                </connections>
+                            </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gsF-VZ-nV2">
                                 <rect key="frame" x="16" y="59" width="126" height="34.333333333333343"/>
                                 <state key="normal" title="Button"/>
@@ -45,11 +53,13 @@
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
+                            <constraint firstItem="KOu-sx-gQ8" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" id="3Em-nN-iQm"/>
                             <constraint firstItem="kXB-Jc-jdO" firstAttribute="trailing" secondItem="vDu-zF-Fre" secondAttribute="trailing" id="6xV-YE-zpm"/>
                             <constraint firstAttribute="bottom" secondItem="WAu-nh-bCZ" secondAttribute="bottom" id="BMM-RH-9FU"/>
                             <constraint firstItem="kXB-Jc-jdO" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="CVU-92-rSg"/>
                             <constraint firstItem="WAu-nh-bCZ" firstAttribute="trailing" secondItem="vDu-zF-Fre" secondAttribute="trailing" id="SYN-cC-LC8"/>
                             <constraint firstItem="kXB-Jc-jdO" firstAttribute="top" secondItem="gsF-VZ-nV2" secondAttribute="bottom" id="Wk8-c9-lBg"/>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="KOu-sx-gQ8" secondAttribute="trailing" constant="16" id="c52-fk-5oe"/>
                             <constraint firstItem="kXB-Jc-jdO" firstAttribute="bottom" secondItem="vDu-zF-Fre" secondAttribute="bottom" id="e0T-7d-eHj"/>
                             <constraint firstItem="WAu-nh-bCZ" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="j87-8X-dTH"/>
                             <constraint firstItem="gsF-VZ-nV2" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" id="lMa-Ud-kXj"/>
@@ -62,11 +72,22 @@
                         <outlet property="tableView" destination="kXB-Jc-jdO" id="4gc-gY-0O9"/>
                         <segue destination="md1-to-Sr3" kind="show" identifier="HEROES_LIST_TO_HERO_DETAIL" id="z8v-g1-Cuv"/>
                         <segue destination="5pk-qQ-9kt" kind="show" identifier="HEROES_LIST_TO_LOGIN" animates="NO" id="O9v-PI-TZd"/>
+                        <segue destination="eVk-1v-011" kind="show" identifier="HEROES_LIST_TO_MAP" id="DW7-wG-a9P"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ief-a0-LHa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="138.1679389312977" y="-2.1126760563380285"/>
+        </scene>
+        <!--Map-->
+        <scene sceneID="M0x-Ac-hoT">
+            <objects>
+                <viewControllerPlaceholder storyboardIdentifier="Map" storyboardName="Map" id="eVk-1v-011" sceneMemberID="viewController">
+                    <navigationItem key="navigationItem" id="QT7-fU-vci"/>
+                </viewControllerPlaceholder>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="nhi-s6-RlS" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="855" y="-108"/>
         </scene>
         <!--Login-->
         <scene sceneID="0Jd-hb-z7A">
@@ -76,7 +97,7 @@
                 </viewControllerPlaceholder>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Xxw-J1-iaW" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="862" y="-96"/>
+            <point key="canvasLocation" x="879" y="-2"/>
         </scene>
         <!--HeroDetail-->
         <scene sceneID="8GL-pr-FDO">
@@ -86,7 +107,7 @@
                 </viewControllerPlaceholder>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="s1W-xL-m8U" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="886" y="92"/>
+            <point key="canvasLocation" x="885" y="100"/>
         </scene>
     </scenes>
     <resources>
