--- a/iOSAvanzado/Presentation/HeroesList/Cells/HeroCellView.xib
+++ b/iOSAvanzado/Presentation/HeroesList/Cells/HeroCellView.xib
@@ -1,71 +1,71 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="22154" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="22155" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22130"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22131"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="HeroCellView" rowHeight="256" id="aFk-In-YMq" customClass="HeroCellView" customModule="DragonBall" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="393" height="256"/>
+        <tableViewCell contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="default" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="10" reuseIdentifier="HeroCellView" rowHeight="200" id="aFk-In-YMq" customClass="HeroCellView" customModule="iOSAvanzado" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="393" height="200"/>
             <autoresizingMask key="autoresizingMask"/>
-            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="aFk-In-YMq" id="aM7-ZP-0jJ">
-                <rect key="frame" x="0.0" y="0.0" width="393" height="256"/>
+            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="aFk-In-YMq" id="aM7-ZP-0jJ">
+                <rect key="frame" x="0.0" y="0.0" width="393" height="200"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="FlS-5b-gmN">
-                        <rect key="frame" x="36" y="19" width="321" height="218"/>
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="200"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VYf-FV-2LD">
-                                <rect key="frame" x="8" y="8" width="305" height="21"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="21" id="9aW-Qj-GRT"/>
-                                </constraints>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Hero Name" lineBreakMode="wordWrap" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VYf-FV-2LD">
+                                <rect key="frame" x="0.0" y="0.0" width="393" height="28"/>
                                 <fontDescription key="fontDescription" name="Papyrus" family="Papyrus" pointSize="18"/>
                                 <color key="textColor" red="0.81084007020000004" green="0.45997279880000003" blue="0.0078820604830000009" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
+                                <lineBreakStrategy key="lineBreakStrategy" hangulWordPriority="YES"/>
                             </label>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ahW-g6-Qbx">
-                                <rect key="frame" x="0.0" y="37" width="181" height="181"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" preservesSuperviewLayoutMargins="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ahW-g6-Qbx">
+                                <rect key="frame" x="0.0" y="28" width="200" height="200"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" secondItem="ahW-g6-Qbx" secondAttribute="height" multiplier="1:1" id="rTo-hq-Na7"/>
+                                    <constraint firstAttribute="width" constant="200" id="YCb-xd-nG4"/>
+                                    <constraint firstAttribute="height" constant="200" id="frM-Ta-9vw"/>
                                 </constraints>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Nvy-5l-SEH">
-                                <rect key="frame" x="189" y="37" width="128" height="173"/>
-                                <fontDescription key="fontDescription" name="Papyrus" family="Papyrus" pointSize="12"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" text="Label" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" showsExpansionTextWhenTruncated="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HJB-xo-vTb">
+                                <rect key="frame" x="208" y="28" width="185" height="200"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
+                                <lineBreakStrategy key="lineBreakStrategy" hangulWordPriority="YES"/>
                             </label>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="Nvy-5l-SEH" firstAttribute="leading" secondItem="ahW-g6-Qbx" secondAttribute="trailing" constant="8" id="5bJ-FB-Jcr"/>
-                            <constraint firstAttribute="trailing" secondItem="Nvy-5l-SEH" secondAttribute="trailing" constant="4" id="7FW-YW-CEm"/>
-                            <constraint firstAttribute="bottom" secondItem="ahW-g6-Qbx" secondAttribute="bottom" id="9QR-5D-B6D"/>
-                            <constraint firstItem="VYf-FV-2LD" firstAttribute="leading" secondItem="FlS-5b-gmN" secondAttribute="leading" constant="8" id="AUo-yx-OcK"/>
-                            <constraint firstItem="Nvy-5l-SEH" firstAttribute="top" secondItem="ahW-g6-Qbx" secondAttribute="top" id="SO0-u4-yS6"/>
-                            <constraint firstItem="ahW-g6-Qbx" firstAttribute="top" secondItem="VYf-FV-2LD" secondAttribute="bottom" constant="8" id="TGx-1r-7XR"/>
-                            <constraint firstItem="ahW-g6-Qbx" firstAttribute="leading" secondItem="FlS-5b-gmN" secondAttribute="leading" id="gth-Th-tAo"/>
-                            <constraint firstAttribute="bottom" secondItem="Nvy-5l-SEH" secondAttribute="bottom" constant="8" id="jBR-kL-uLA"/>
-                            <constraint firstAttribute="trailing" secondItem="VYf-FV-2LD" secondAttribute="trailing" constant="8" id="lnH-OR-ZP0"/>
-                            <constraint firstItem="VYf-FV-2LD" firstAttribute="top" secondItem="FlS-5b-gmN" secondAttribute="top" constant="8" id="oQu-TY-p8d"/>
+                            <constraint firstItem="VYf-FV-2LD" firstAttribute="leading" secondItem="FlS-5b-gmN" secondAttribute="leading" id="5gG-gK-Fec"/>
+                            <constraint firstItem="HJB-xo-vTb" firstAttribute="leading" secondItem="ahW-g6-Qbx" secondAttribute="trailing" constant="8" id="Rx5-b2-l5F"/>
+                            <constraint firstAttribute="trailing" secondItem="VYf-FV-2LD" secondAttribute="trailing" id="hRh-iM-Sqs"/>
+                            <constraint firstItem="ahW-g6-Qbx" firstAttribute="leading" secondItem="FlS-5b-gmN" secondAttribute="leading" id="nNH-me-fik"/>
+                            <constraint firstAttribute="trailing" secondItem="HJB-xo-vTb" secondAttribute="trailing" id="oYH-lA-vAO"/>
+                            <constraint firstItem="VYf-FV-2LD" firstAttribute="top" secondItem="FlS-5b-gmN" secondAttribute="top" id="qO9-dU-QDT"/>
+                            <constraint firstItem="ahW-g6-Qbx" firstAttribute="bottom" secondItem="HJB-xo-vTb" secondAttribute="bottom" id="tbs-WZ-mrK"/>
+                            <constraint firstItem="HJB-xo-vTb" firstAttribute="top" secondItem="VYf-FV-2LD" secondAttribute="bottom" id="utn-C3-WHA"/>
+                            <constraint firstItem="ahW-g6-Qbx" firstAttribute="top" secondItem="VYf-FV-2LD" secondAttribute="bottom" id="wUX-tm-PvN"/>
                         </constraints>
                     </view>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="FlS-5b-gmN" firstAttribute="top" secondItem="aM7-ZP-0jJ" secondAttribute="topMargin" constant="8" id="7RH-qz-Epv"/>
-                    <constraint firstAttribute="trailingMargin" secondItem="FlS-5b-gmN" secondAttribute="trailing" constant="16" id="Ch3-EJ-rUu"/>
-                    <constraint firstAttribute="bottomMargin" secondItem="FlS-5b-gmN" secondAttribute="bottom" constant="8" id="WN6-1m-wnj"/>
-                    <constraint firstItem="FlS-5b-gmN" firstAttribute="leading" secondItem="aM7-ZP-0jJ" secondAttribute="leadingMargin" constant="16" id="tlH-jy-xrx"/>
+                    <constraint firstItem="FlS-5b-gmN" firstAttribute="leading" secondItem="aM7-ZP-0jJ" secondAttribute="leading" id="B8G-Iy-pg1"/>
+                    <constraint firstAttribute="trailing" secondItem="FlS-5b-gmN" secondAttribute="trailing" id="OGU-JD-b90"/>
+                    <constraint firstItem="FlS-5b-gmN" firstAttribute="top" secondItem="aM7-ZP-0jJ" secondAttribute="top" id="cUH-H0-Qj3"/>
+                    <constraint firstAttribute="bottom" secondItem="FlS-5b-gmN" secondAttribute="bottom" id="o8V-xb-4iL"/>
                 </constraints>
             </tableViewCellContentView>
+            <edgeInsets key="layoutMargins" top="20" left="20" bottom="20" right="20"/>
             <connections>
                 <outlet property="containerView" destination="FlS-5b-gmN" id="3UR-Cn-Kv6"/>
-                <outlet property="heroDescription" destination="Nvy-5l-SEH" id="MmH-ZM-EKO"/>
+                <outlet property="heroDescription" destination="HJB-xo-vTb" id="6yF-4N-YwX"/>
                 <outlet property="name" destination="VYf-FV-2LD" id="DhL-hY-iZ8"/>
                 <outlet property="photo" destination="ahW-g6-Qbx" id="zmb-eq-RHq"/>
             </connections>
